--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-personalize-runtime": "^3.920.0",
     "@aws-sdk/client-s3": "^3.883.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
